kubernetes/templates/etl-magic-eden-collection-xray-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o ./kubernetes -c --multiple-container-mode
    kompose.service.group: core
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: core
  name: etl-magic-eden-collection-xray
spec:
  ports:
    - name: "7003"
      port: 7003
      targetPort: 4207
  selector:
    io.kompose.service: core
status:
  loadBalancer: {}
