kubernetes/templates/etl-serum-market-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o ./kubernetes -c --multiple-container-mode
    kompose.service.group: core
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: core
  name: etl-serum-market
spec:
  ports:
    - name: "7001"
      port: 7001
      targetPort: 4205
  selector:
    io.kompose.service: core
status:
  loadBalancer: {}
