kubernetes/templates/etl-solana-global-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o ./kubernetes -c --multiple-container-mode
    kompose.service.group: core
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: core
  name: etl-solana-global
spec:
  ports:
    - name: "7000"
      port: 7000
      targetPort: 4204
  selector:
    io.kompose.service: core
status:
  loadBalancer: {}
