kubernetes/templates/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o ./kubernetes -c --multiple-container-mode
    kompose.service.group: core
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: core
  name: mongo-express
spec:
  ports:
    - name: "8087"
      port: 8087
      targetPort: 8081
  selector:
    io.kompose.service: core
status:
  loadBalancer: {}
