kubernetes/templates/serum-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o ./kubernetes -c --multiple-container-mode
    kompose.service.group: core
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: core
  name: serum
spec:
  ports:
    - name: "4203"
      port: 4203
      targetPort: 4203
  selector:
    io.kompose.service: core
status:
  loadBalancer: {}
